# eserciziCPP

./: .gitignore  CMakeLists.txt  CalcolaMedia  CalcolaMedia.cpp  arraymio  arraymio.cpp  askcontinue.cpp  auto (1).cpp  auto.cpp  base_n.cpp  bmi_struct.cpp  bodymassindex  bodymassindex.cpp  calcola_diagonale_parallel  calcola_diagonale_parallel.cpp  cassanotest1.cpp  cassanotest2.cpp  cassanotest3.cpp  cast.cpp  ciclo_for  ciclo_for.cpp  cindatisbagliati  cindatisbagliati.cpp  class  class.cpp  distanzafraipunti  distanzafraipunti.cpp  fabs  fabs.cpp  fibonacciEfficiente.cpp  fibonacci_binomiale.cpp  funzione  funzione.cpp  funzsomma3num  funzsomma3num.cpp  goto  goto.cpp  helloworld  helloworld.cpp  listarray  (+23 more)
IIIC-doc/: crc10-8bit-semplice.cpp  loop0.cpp  loop1.cpp  loop2.cpp  loop3.cpp  merge.cpp  shell.txt  sort_bubble.cpp  sort_scambio.cpp  test_online03-02.txt
array4/: array1.cpp  array2.cpp  array3.cpp  array4  array4.cpp  array5  array5.cpp  array7  array7.cpp  array8  array8.cpp
liste/: lista0.cpp  lista1  lista1.cpp  lista2.cpp
risoluzione/: risoluzione.cpp
stringaEarray/: arg1.cpp  arg2.cpp  calc.cpp  oper.cpp  operatori_logici.cpp  operswitch.cpp  stringa0.cpp  stringaEarray.cpp
