cmake_minimum_required(VERSION 3.8)
project(eserciziCPP)

set(CMAKE_CXX_STANDARD 11)

add_executable(setwtabellarray setwtabellarray.cpp)
add_executable(base_n base_n.cpp)
add_executable(arg1 stringaEarray/arg1.cpp)
add_executable(stringa0 stringaEarray/stringa0.cpp)
add_executable(fibonacciEfficiente fibonacciEfficiente.cpp)